Fix class of tab bar to correctly reflow on mobile devices

--- a/docs-theme/partials/header.html
+++ b/docs-theme/partials/header.html
@@ -19,7 +19,7 @@
       <div class="md-flex__cell md-flex__cell--stretch">
         <div class="md-flex__ellipsis" data-md-component="title">
             <span class="md-header-nav__topic">
-              <nav class="md-tabs__inner md-grid">
+              <nav class="md-tabs md-tabs--active md-tabs__inner md-grid">
                 <ul class="md-tabs__list">
                   {% for nav_item in nav %}
                     {% include "partials/tabs-item.html" %}
