--- a/docs-theme/partials/header.html
+++ b/docs-theme/partials/header.html
@@ -5,11 +5,11 @@
   <nav class="md-header-nav md-grid">
     <div class="md-flex">
       <div class="md-flex__cell md-flex__cell--shrink">
-        <a href="{{ config.site_url | default(nav.homepage.url, true) | url }}" title="{{ config.site_name }}" aria-label="{{ config.site_name }}" class="md-header-nav__button md-logo">
+        <a href="{{ config.site_url | default(nav.homepage.url, true) | url }}" title="{{ config.site_name }}" class="md-header-nav__button md-logo">
           {% if config.theme.logo.icon %}
             <i class="md-icon">{{ config.theme.logo.icon }}</i>
           {% else %}
-            <img alt="logo" src="{{ config.theme.logo | url }}" height="24">
+            <img src="{{ config.theme.logo | url }}" height="24">
           {% endif %}
         </a>
       </div>
@@ -17,21 +17,16 @@
         <label class="md-icon md-icon--menu md-header-nav__button" for="__drawer"></label>
       </div>
       <div class="md-flex__cell md-flex__cell--stretch">
-        <div class="md-flex__ellipsis md-header-nav__title" data-md-component="title">
-          {% if config.site_name == page.title %}
-            {{ config.site_name }}
-          {% else %}
+        <div class="md-flex__ellipsis" data-md-component="title">
             <span class="md-header-nav__topic">
-              {{ config.site_name }}
+              <nav class="md-tabs md-tabs--active md-tabs__inner md-grid">
+                <ul class="md-tabs__list">
+                  {% for nav_item in nav %}
+                    {% include "partials/tabs-item.html" %}
+                  {% endfor %}
+                </ul>
+              </nav>
             </span>
-            <span class="md-header-nav__topic">
-              {% if page and page.meta and page.meta.title %}
-                {{ page.meta.title }}
-              {% else %}
-                {{ page.title }}
-              {% endif %}
-            </span>
-          {% endif %}
         </div>
       </div>
       <div class="md-flex__cell md-flex__cell--shrink">
