--- a/docs-theme/partials/nav.html
+++ b/docs-theme/partials/nav.html
@@ -1,25 +1,26 @@
-{#- This file was automatically generated - do not edit -#}
+{#-
+  This file was automatically generated - do not edit
+-#}
 <nav class="md-nav md-nav--primary" data-md-level="0">
   <label class="md-nav__title md-nav__title--site" for="__drawer">
-    <a
-      href="{{ config.site_url | default(nav.homepage.url, true) | url }}"
-      title="{{ config.site_name }}"
-      class="md-nav__button md-logo"
-    >
+    <a href="{{ config.site_url | default(nav.homepage.url, true) | url }}" title="{{ config.site_name }}" class="md-nav__button md-logo">
       {% if config.theme.logo.icon %}
-      <i class="md-icon">{{ config.theme.logo.icon }}</i>
+        <i class="md-icon">{{ config.theme.logo.icon }}</i>
       {% else %}
-      <img src="{{ config.theme.logo | url }}" width="48" height="48" />
+        <img alt="logo" src="{{ config.theme.logo | url }}" width="48" height="48">
       {% endif %}
     </a>
   </label>
   {% if config.repo_url %}
-  <div class="md-nav__source">
-    {% include "partials/source.html" %}
-  </div>
+    <div class="md-nav__source">
+      {% include "partials/source.html" %}
+    </div>
   {% endif %}
   <ul class="md-nav__list" data-md-scrollfix>
-    {% for nav_item in nav %} {% set path = "nav-" + loop.index | string %} {%
-    set level = 1 %} {% include "partials/nav-item.html" %} {% endfor %}
+    {% for nav_item in nav %}
+      {% set path = "nav-" + loop.index | string %}
+      {% set level = 1 %}
+      {% include "partials/nav-item.html" %}
+    {% endfor %}
   </ul>
 </nav>
